--- a/package.json
+++ b/package.json
@@ -41,10 +41,9 @@
   "bugs": {
     "url": "https://github.com/wc-toolkit/changelog/issues"
   },
-  "homepage": "https://wc-toolkit.com/cem-utilities/changelog",
+  "homepage": "https://wc-toolkit.com/adoption/changelog",
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
-    "@custom-elements-manifest/analyzer": "^0.10.4",
     "@eslint/js": "^9.19.0",
     "@types/node": "^20.14.12",
     "@wc-toolkit/cem-utilities": "^1.2.0",
